FullSb1-27-apr-15/src/objects/Company__c.object
<CustomObject>
    <description>This object is to keep build a DB of companies &amp; businesses and be able to track B2B candidates</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Designation__c</fullName>
        <label>Contact Designation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <picklist>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>City__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>